Fix spacing

--- a/src/components/WarehouseInventory/WarehouseInventory.scss
+++ b/src/components/WarehouseInventory/WarehouseInventory.scss
@@ -74,6 +74,7 @@
         @include tablet {
             background: none;
             padding: 0;
+            margin-left: 0.2rem;
             vertical-align: middle;
             width: 1.6rem;
             height: 1.6rem;
